[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Ariana Sahitaj <demiri.ariana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
nltk = "^3.8.1"
sqlparse = "^0.5.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
